# OtonoDentatsu-Android

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/wabycheck/ond/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opus_jni.cpp
app/src/main/java/com/wabycheck/ond/: AudioStreamService.kt  MainActivity.kt  UDPReceiver.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wabycheck/ond/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
